@startuml overallClassDiagram
left to right direction

package "Workout Planning & Tracking System"{
    class User
    class Planner
    class Viewer
    class WorkoutPlan
    class Session
    class Workout
    class SuggestionEngine
    class ProgressAnalyser

    User -down-* WorkoutPlan
    User -down-- Session
    User -down-- Viewer

    Planner -- WorkoutPlan
    Planner -- Session
    Planner ..> Viewer

    Viewer -- WorkoutPlan
    Viewer -- Session
    Viewer -- Workout
    Viewer ..> SuggestionEngine

    WorkoutPlan o-- Workout
    Session -- WorkoutPlan
    Session o-- Workout

    ProgressAnalyser ..> Viewer
    ProgressAnalyser ..> Session
    ProgressAnalyser ..> WorkoutPlan

    SuggestionEngine ..> WorkoutPlan
    SuggestionEngine ..> Session
}
@enduml